--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"discord.js": "^13.1.0",
 		"google-auth-library": "^7.9.1",
 		"googleapis": "^85.0.0",
+		"iso8601-duration": "^1.3.0",
 		"node-cleanup": "^2.1.2",
 		"p-queue": "^7.1.0"
 	}
