Exclude videos by optional max duration
maxDuration is an optional config value. Videos longer
than this value, in seconds, are not added to the
playlist.

--- a/secrets/example-config.json
+++ b/secrets/example-config.json
@@ -2,5 +2,6 @@
 	"token": "DISCORD BOT TOKEN",
 	"technician": "DISCORD USER ID (DM'ed for errors)",
 	"channel": "DISCORD CHANNEL ID",
-	"playlist": "YOUTUBE PLAYLIST ID"
+	"playlist": "YOUTUBE PLAYLIST ID",
+	"maxDuration": "(optional) max video duration seconds"
 }
