Provide a button to bypass the duration limit
There's also a config option to disable this.

--- a/secrets/example-config.json
+++ b/secrets/example-config.json
@@ -3,5 +3,6 @@
 	"technician": "DISCORD USER ID (DM'ed for errors)",
 	"channel": "DISCORD CHANNEL ID",
 	"playlist": "YOUTUBE PLAYLIST ID",
-	"maxDuration": "(optional) max video duration seconds"
+	"maxDuration": "(optional) max video duration seconds",
+	"strict": "(optional) always enforce duration, boolean"
 }
