Add commands to more precisely control thread archiving
/noarchive - Prevents a thread from expiring.
/archive - Archives a thread without locking it. (Locking
prevents ordinary users from unarchiving the thread.)

Threads are automatically unarchived when the event fires
for them being archived due to expiring.

--- a/secrets/example-config.json
+++ b/secrets/example-config.json
@@ -2,6 +2,7 @@
 	"token": "DISCORD BOT TOKEN",
 	"technician": "DISCORD USER ID (DM'ed for errors)",
 	"channel": "DISCORD CHANNEL ID",
+	"autoUnarchiveThreads": [],
 	"playlist": "YOUTUBE PLAYLIST ID",
 	"maxDuration": "(optional) max video duration seconds",
 	"strict": "(optional) always enforce duration, boolean"
